--- a/techio.yml
+++ b/techio.yml
@@ -5,6 +5,4 @@ plan:
 projects:
   csharp:
     root: /csharp-project
-    runner:
-      name: techio/dotnet-runner
-      version: 1.1.0-dotnet-1.1-sdk-msbuild
+    runner: techio/mono-nuget-nunit-runner:1.2.0-mono-4.8
