--- a/techio.yml
+++ b/techio.yml
@@ -5,4 +5,6 @@ plan:
 projects:
   csharp:
     root: /csharp-project
-    runner: techio/mono-nuget-nunit-runner:1.2.0-mono-4.8
+    runner: 
+      name: technicallyagile/dotnet-runner
+      version: 1.1.0-dotnet-1.1-sdk-msbuild
